<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_RxUdpStewart" Id="{abe168e2-cdbf-4745-8b3b-3cce51d127f9}">
    <Declaration><![CDATA[TYPE ST_RxUdpStewart :
STRUCT
	Frame_Count : DINT := 0;
	Motion_Status : DINT := 0;
	Platform_setpoint_surge : REAL := 0.0;
	Platform_setpoint_sway : REAL := 0.0;
	Platform_setpoint_heave : REAL := 0.0;
	Platform_setpoint_roll : REAL := 0.0;
	Platform_setpoint_pitch : REAL := 0.0;
	Platform_setpoint_yaw : REAL := 0.0;
	Special_effect_surge_setpoint : REAL := 0.0;
	Special_effect_sway_setpoint : REAL := 0.0;
	Special_effect_heave_setpoint : REAL := 0.0;
	Special_effect_roll_setpoint : REAL := 0.0;
	Special_effect_pitch_setpoint : REAL := 0.0;
	Special_effect_yaw_setpoint : REAL := 0.0;
	Actual_position_actuator_1 : REAL := 0.0;
	Actual_position_actuator_2 : REAL := 0.0;
	Actual_position_actuator_3 : REAL := 0.0;
	Actual_position_actuator_4 : REAL := 0.0;
	Actual_position_actuator_5 : REAL := 0.0;
	Actual_position_actuator_6 : REAL := 0.0;
	Actual_platform_position_surge : REAL := 0.0;
	Actual_platform_position_sway : REAL := 0.0;
	Actual_platform_position_heave : REAL := 0.0;
	Actual_platform_position_roll : REAL := 0.0;
	Actual_platform_position_pitch : REAL := 0.0;
	Actual_platform_position_yaw : REAL := 0.0;
	Actual_platform_velocity_surge : REAL := 0.0;
	Actual_platform_velocity_sway : REAL := 0.0;
	Actual_platform_velocity_heave : REAL := 0.0;
	Actual_platform_velocity_roll : REAL := 0.0;
	Actual_platform_velocity_pitch : REAL := 0.0;
	Actual_platform_velocity_yaw : REAL := 0.0;
	Actual_platform_acceleration_surge : REAL := 0.0;
	Actual_platform_acceleration_sway : REAL := 0.0;
	Actual_platform_acceleration_heave : REAL := 0.0;
	Actual_platform_acceleration_roll : REAL := 0.0;
	Actual_platform_acceleration_pitch : REAL := 0.0;
	Actual_platform_acceleration_yaw : REAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>